

Name: Segue ChangeLog


v. 1.3.0 (the future)
----------------------------------------------------
		
	**** IMPORTANT *** Change: Various changes in Segue necessitate that you upgrade to a new config file as well as run the '1.3.0 update' under 'admin tools' --&gt; 'updates' to make several changes to Segue's database and file-storage structure. (Adam Franco)
		
	* New feature: Added Your Posts link to home page (default.inc.php). Your posts displays all discussion/assessment posts the current user has made on all sites. Administrators will have the option to view all discussion/assessment posts across all sites for all users or find all the posts of a given user. (Alex Chapin)
		
	* Change: Changed the way internal links (i.e. links to other pages in same site) are saved when added via section and page link types and via story link types. Specifically, the full uri portion of internal link urls are replaced with a constant (similiar to Media Library path) when saved to database. This will allow for updating these links correctly when copying a site or moving a site from one instance of Segue to another. (Alex Chapin)		
		
	* Change: Changed Active-X editor so that it links to the Media Library for images. (Alex Chapin)		
		
	* Change: #865093 View and activate permission settings on template sites now affect who/when they appear for users creating sites. (Adam Franco)
		
	* Change: Added the HTML Area editor to Image, Link, and File, story types. (Adam Franco)
		
	* Bug Fix: Fixed bug in display of stories by enclosing each story in a table to prevent edit and discuss/assess links from shifting across stories (Alex Chapin)
		
	* Change: When logging in and logging out, users are kept on the same page if possible instead of being redirected back to the default page. (Adam Franco)
		