@@ -9,6 +9,16 @@
 			file as well as run the '1.3.0 update' under 'admin tools' --&gt; 'updates'
 			to make several changes to Segue's database and file-storage structure.
 		 (<i>Adam Franco</i>)
+		
+		<li/> Change:  
+			Discussions now display 'cancel' buttons when in post or rate modes.
+		 (<i>Adam Franco</i>)
+		<li/> New feature:  
+			Added 'Preview as user' functionality (found in the Permissions screen)
+			that allows the owner of a site to see what the site would look like for
+			other users (including 'everyone' and 'institute'). This can give site
+			owners a better understanding of the permissions system.
+		 (<i>Adam Franco</i>)
 		<li/> New feature:  
 			Added Your Posts link to home page (default.inc.php).  Your posts displays
 			all discussion/assessment posts the current user has made on all sites.
