@@ -8,6 +8,11 @@ v. 1.3.0 (the future)
 		
 	**** IMPORTANT *** Change: Various changes in Segue necessitate that you upgrade to a new config file as well as run the '1.3.0 update' under 'admin tools' --&gt; 'updates' to make several changes to Segue's database and file-storage structure. (Adam Franco)
 		
+		
+	* Change: Discussions now display 'cancel' buttons when in post or rate modes. (Adam Franco)
+		
+	* New feature: Added 'Preview as user' functionality (found in the Permissions screen) that allows the owner of a site to see what the site would look like for other users (including 'everyone' and 'institute'). This can give site owners a better understanding of the permissions system. (Adam Franco)
+		
 	* New feature: Added Your Posts link to home page (default.inc.php). Your posts displays all discussion/assessment posts the current user has made on all sites. Administrators will have the option to view all discussion/assessment posts across all sites for all users or find all the posts of a given user. (Alex Chapin)
 		
 	* Change: Changed the way internal links (i.e. links to other pages in same site) are saved when added via section and page link types and via story link types. Specifically, the full uri portion of internal link urls are replaced with a constant (similiar to Media Library path) when saved to database. This will allow for updating these links correctly when copying a site or moving a site from one instance of Segue to another. (Alex Chapin)		
